src/test/ui/regions/regions-infer-invariance-due-to-decl.nll.stderr
error: lifetime may not live long enough
  --> $DIR/regions-infer-invariance-due-to-decl.rs:12:5
   |
LL | fn to_longer_lifetime<'r>(b_isize: Invariant<'r>) -> Invariant<'static> {
   |                       -- lifetime `'r` defined here
LL |     b_isize
   |     ^^^^^^^ returning this value requires that `'r` must outlive `'static`

error: aborting due to previous error

